...
    const val SETTINGS_THEME_SWITCH = "SETTINGS_THEME_SWITCH"
    const val SETTINGS_USER_NAME = "SETTINGS_USER_NAME"
    const val SETTINGS_USER_EMAIL = "SETTINGS_USER_EMAIL"
    const val SETTINGS_CLOSE_BUTTON = "SETTINGS_CLOSE_BUTTON"

    // Seen Screen
    const val MY_MOVIES_SORT_BUTTON = "MY_MOVIES_SORT_BUTTON"
    const val MY_MOVIES_SORT_DROPDOWN_SECTION = "MY_MOVIES_SORT_DROPDOWN_SECTION"
    const val TOGGLE_FAVORITE_BUTTON = "TOGGLE_FAVORITE_BUTTON"

    fun moviePreview(movieTitle: String) = "MOVIE_PREVIEW_$movieTitle"

    // Detail Screen
    const val MOVIE_DETAIL_IMAGE = "MOVIE_DETAIL_IMAGE"
    const val SET_MOVIE_AS_FAVORITE_BUTTON = "SET_MOVIE_AS_FAVORITE_BUTTON"
...
